# NeurixAI

./: .gitignore  .pre-commit-config.yaml  LRP.py  Main.py  NN.py  README.md  compare2linearregression_withsanger_based_on_DS.ipynb  config.yml  crossant.py  data.py  fixed_config.yml  pyproject.toml  training.py
.github/workflows/: test.yml
.ipynb_checkpoints/: compare2linearregression_withsanger_based_on_DS-checkpoint.ipynb
notebooks/: Build_compund_embeddings.ipynb  Predict_sanger.ipynb  build_rna_dataset.ipynb  tests.ipynb  train_network.ipynb
notebooks/evaluation/: big_model_evaluation.ipynb  cv_evaluation.ipynb  evaluation.ipynb  evaluation_from_weights.ipynb  minimal_train_example.ipynb  train_network.ipynb
notebooks/preprocessing/: Build_compound_embeddings.ipynb  Build_compund_embeddings.ipynb  build_rna_dataset.ipynb  build_targets.ipynb  drug_gnn_feature_extraction.ipynb  embedding_rdkit.ipynb  imbalancedness_check.ipynb  sanger_integration.ipynb  smiles.ipynb
notebooks/training/: dataloader_gnn.ipynb  gnn.ipynb  minimal_train_example.ipynb  minimal_train_gene_only.ipynb  train_fusion_model.ipynb  train_network.ipynb
old_scripts/: Compare_embedding_and_no_embedding.R  LRP_results.R  LRP_results_Manuscript.R  LRP_results_single_genes.R  LRP_results_some_cell_lines.R  PAZOPANIB_LRP_results.R  Predict_sanger.ipynb  analyze_sanger_results.R  compare2ground_truth.R  compare2linearregression.ipynb  compare2linearregression_withsanger.ipynb  compare2linearregression_withsanger_based_on_DS.ipynb  compare_LRP_correlations_between_embeddings.R  plot_cell_and_drug_embeddings.ipynb  smiles2vec.ipynb  training_results_all_long.R  training_results_manuscript.R  tsnes_etal.R
plots_statistics/: .Rhistory  Compare_embedding_and_no_embedding.R  LRP_results.R  LRP_results_Manuscript.R  build_rna_dataset.ipynb  build_targets.ipynb  compare2linearregression.ipynb  compare2linearregression_withsanger.ipynb  compare_LRP_correlations_between_embeddings.R  plot_cell_and_drug_embeddings.ipynb  smiles2vec.ipynb  training_results_all_long.R  tsnes_etal.R
plots_statistics/.ipynb_checkpoints/: Build_compund_embeddings-checkpoint.ipynb  build_rna_dataset-checkpoint.ipynb  compare2linearregression-checkpoint.ipynb  compare2linearregression_withsanger-checkpoint.ipynb  compare2linearregression_withsanger_based_on_DS-checkpoint.ipynb
plots_statistics/old_scripts/: PAZOPANIB_LRP_results.R  compare2ground_truth.R  compare2linearregression.ipynb
src/: NN.py
src/druxai/: Main.py  _logging.py  crossant.py  cv_train.py  settings.py  single_train.py  test.ipynb  train.py  train_folds.py  train_fusion_model.py  train_network.ipynb  train_old.py  train_smilesgraph_gene.py
src/druxai/models/: LRP.py  NN.py  NN_flexible.py  NN_minimal.py  fusion_model.py  gnn.py  single_model.py
src/druxai/utils/: configurator.py  cross_validate.py  data.py  data_gnn.py  dataframe_utils.py  evaluation.py  fusion_model_utils.py  gnn_utils.py  plotting.py  set_seeds.py  training.py  training_utils.py
tests/data/: data.py  test_data.py  test_dataframe_utils.py
